--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "simulink-ardupilot-bridge"]
 	path = simulink-ardupilot-bridge
-	url = git@github.com:icedraco/simucopter-bridge.git
+	url = https://github.com/icedraco/simucopter-bridge.git
